ioat(4): Compile on i386

Truncate BUS_SPACE_MAXADDR_40BIT to essentially BUS_SPACE_MAXADDR_32BIT on
platforms with 32-bit bus_addr_t (i.e., i386).

PR:		215034
Reported by:	ngie@
Sponsored by:	Dell EMC Isilon

Former-commit-id: 98e75e0e0889b12c0e0fed7b1815b8b7f2358b96